--- a/DeepLexicalHypothesis.ipynb
+++ b/DeepLexicalHypothesis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DeepLexicalHypothesis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNzGlVNbaUTDB7E9N4j/03j",
+      "authorship_tag": "ABX9TyNqn9YcKIlTBYtAyPOKrPjl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,9 +36,9 @@
         "This notebook reproduces experiments from the Lexical Hypothesis chapter of my dissertation [Language Modeling for Personality Prediction](https://open.bu.edu/handle/2144/41942). After loading the python libraries, pretrained language model, and adjective lists this notebook:\r\n",
         "\r\n",
         "1.   Performs factor analysis on one of several sets of words. Words are plotted on the resulting factors. With default settings, two factors emerge: socialization and self-actualization.\r\n",
-        "2.   Each factor can be thought of as a vector pointing in 1024 dimensional space (the size of the RoBERTa embedding). So one can qualitatively compare different experiments. Are the same factors recovered? Two sets of words are created, basic and advanced. The resulting factors are correlated and eigenvalues compared.\r\n",
-        "3.   Phrases can be embedded as well. 20 IPIP questions are projected onto factors obtained above.\r\n",
-        "4.   A multi-lingual model is uploaded. Words in English and Spanish recover two shared factors. Please expand this to other languages!"
+        "2.   Quantitatively compares results from different experimental settings including factorization method and adjective set.\r\n",
+        "3.   Projects 20 [IPIP](https://ipip.ori.org/) questions on to the derived personality space.\r\n",
+        "4.   Factorizes English and Spanish words together using a multilingual model. The model is trained on 100 languages, please help by expanding it beyond English and Spanish!"
       ]
     },
     {
@@ -130,7 +130,7 @@
         "#add this function to fairseq's hub_interface\r\n",
         "fairseq.models.roberta.hub_interface.RobertaHubInterface.extract_mask_embedding = extract_mask_embedding"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "adjectives = np.squeeze(adjectives)\r\n",
         "adjectives = np.unique(adjectives) #squeeze and unique to make sure there are no duplicates or extra dimensions."
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,7 +216,7 @@
         "    plt.show()\r\n",
         "#make fontsize smaller and figure size bigger if plotting many words."
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +259,7 @@
         "advanced_words = np.unique(advanced_words)\r\n",
         "advanced_words = [word for word in advanced_words if word not in basic_words]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
         "a_sentences = [\"My personality can be described as <mask> and \" + word + \".\" for word in advanced_words]\r\n",
         "a_vec = [roberta.extract_mask_embedding(sentence) for sentence in a_sentences]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
         "plt.clf()\r\n",
         "#after this plot all others have a grey background. Why?"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -363,7 +363,7 @@
         "plt.xticks(ticks = range(1,11))\r\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -415,7 +415,7 @@
         "ax.set_ylabel(\"Factor Analysis\")\r\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -468,7 +468,7 @@
         "plt.legend(handles=[mpatches.Patch(color = colors[i], label = big5[i]) for i in range(len(colors))], fontsize = 30)\r\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -554,7 +554,7 @@
         "            plt.text(x[j], y[j], word, fontsize=16, color = 'r')\r\n",
         "    plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
