--- a/DeepLexicalHypothesis.ipynb
+++ b/DeepLexicalHypothesis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DeepLexicalHypothesis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqn9YcKIlTBYtAyPOKrPjl",
+      "authorship_tag": "ABX9TyOxzFvFdGyzLmVsdZFlUz3R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,10 +35,10 @@
         "\r\n",
         "This notebook reproduces experiments from the Lexical Hypothesis chapter of my dissertation [Language Modeling for Personality Prediction](https://open.bu.edu/handle/2144/41942). After loading the python libraries, pretrained language model, and adjective lists this notebook:\r\n",
         "\r\n",
-        "1.   Performs factor analysis on one of several sets of words. Words are plotted on the resulting factors. With default settings, two factors emerge: socialization and self-actualization.\r\n",
+        "1.   Performs factor analysis on one of several sets of words. Words are plotted on the resulting factors. With default settings, two factors emerge: socialization and self-actualization. This is interesting because the method only promises to produce a _descriptive_ framework but yields a _theoretically_ satisfying framework in line with Skinner, Maslow, etc. It also matches the empirical findings of [Digman](https://psycnet.apa.org/buy/1997-42257-010) who describes similar meta-traits that exist on top of the Big Five.\r\n",
         "2.   Quantitatively compares results from different experimental settings including factorization method and adjective set.\r\n",
         "3.   Projects 20 [IPIP](https://ipip.ori.org/) questions on to the derived personality space.\r\n",
-        "4.   Factorizes English and Spanish words together using a multilingual model. The model is trained on 100 languages, please help by expanding it beyond English and Spanish!"
+        "4.   Factorizes English and Spanish words together using a multilingual model. The same two factors emerge. The model is trained on 100 languages, please help by expanding it beyond English and Spanish!"
       ]
     },
     {
@@ -241,7 +241,7 @@
       "source": [
         "#A qualitative assessment of the method can be made by hypothesizing\r\n",
         "#what underlying factors arrange the words on the plot.\r\n",
-        "#This next section takes a qualitative look at robustness to modeling decisions\r\n",
+        "#This next section takes a quantitative look at robustness to modeling decisions\r\n",
         "#starting with comparing factors found using different sets of adjectives.\r\n",
         "\r\n",
         "#basic words are those in the ESL guide and webster's core personality words\r\n",
